fixed alignment

--- a/styles.css
+++ b/styles.css
@@ -202,7 +202,7 @@ p{
     border-radius: 10px;
     border: #afecff 1px solid;
     padding-inline: 10px;
-
+    text-align: center;
 }
 
 @media only screen and (max-width: 660px){
